# Parkchain

./: .env.example  .gitignore  CHANGES.md  DATABASE_SETUP_GUIDE.md  DECHARGE_HACKATHON.md  EV_CHARGING_IMPLEMENTATION_STATUS.md  FIX_404_AND_BATCH.md  FIX_WSZYSTKICH_PROBLEMOW.md  GATEWAY_INTEGRATION.md  HACKATHON_SUBMISSION.md  INSTRUKCJE_WINDOWS.md  MASTERCARD_DEFI_HACKATHON_PITCH.md  MASTERCARD_HACKATHON.md  Makefile  NEW_FEATURES_2025.md  PARKING_MARKETPLACE_README.md  QUICKSTART_GATEWAY.md  QUICK_START_PARKING_MARKETPLACE.md  STELLAR_HACKATHON_PRESENTATION.md  STELLAR_HACKATHON_SUBMISSION.md  WERYFIKACJA_NAPRAWEK.md  docker-compose.yml  nginx.conf  restart_all.sh  restart_parkchain.ps1  setup.sh  start-backend.sh  start_frontend_clean.sh
backend/: .env.example  Dockerfile  QUICK_START.md  package-lock.json  package.json  pnpm-lock.yaml  server.js
database/: README_INSPECTIONS.md  SETUP_CHARGING_SESSIONS.md  SETUP_CHARGING_STATIONS.md  SETUP_PARKING_MARKETPLACE.md  add_flexible_pricing.sql  add_parking_names.sql  add_parking_type.sql  ev_charging_network.sql  favorites_system.sql  inspections_setup.sql  inspections_setup_simple.sql  parking_marketplace.sql  reviews_and_ratings.sql  (+3 more)
programs/parking-marketplace/: Cargo.toml  README.md
programs/parking-marketplace/src/: error.rs  lib.rs
programs/parking-marketplace/src/instructions/: buy_asset.rs  cancel_listing.rs  create_listing.rs  distribute_revenue.rs  initialize_asset.rs  mod.rs  update_compliance.rs
programs/parking-marketplace/src/state/: marketplace.rs  mod.rs  parking_asset.rs  revenue_distribution.rs
(+150 files in other folders)
