[package]
name = "parking-marketplace"
version = "0.1.0"
description = "Solana program for parking asset tokenization and marketplace"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "parking_marketplace"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "~1.17"

[dev-dependencies]
solana-program-test = "~1.17"
solana-sdk = "~1.17"
spl-token = { version = "~4.0", features = ["no-entrypoint"] }
